fixed text cutoff

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 html, body {
   font-family: "Underwood Champion";
   overflow-x: hidden;
-  max-width: 100%;
+  max-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,12 +68,13 @@ img {
 
 .poem {
   padding-bottom: 5vw;
-  max-width: 100vw;
+  max-width: 90vw;
   overflow-wrap: normal;
 }
 
 .poem-title {
   width: 400px;
+  max-width: 90vw;
   text-align: center;
   padding-bottom: 2vw;
 }
